Revision history for Perl extension MooseX-Getopt

0.07 Tues. Dec. 4, 2007
    * MooseX::Getopt::Meta::Attribute::NoGetopt  
      - fixed miscapitalization of NoGetopt in the docs

0.06 Fri. Nov. 23, 2007
    * MooseX::Getopt
      - refactored &new_with_option some so that 
        this will work better with other Getopt 
        modules (nuffin)
    
    + MooseX::Getopt::Strict
      - version of MooseX::Getopt which requires 
        you to specify which attributes you want 
        processed explicity
        - added tests for this
    
    + MooseX::Getopt::Meta::Attribute::NoGetopt
      - a custom meta-attribute which can be 
        used to specify that an attribute should 
        not be processed
        - added tests for this

0.05 Tues. July 3, 2007
    * MooseX::Getopt::OptionTypeMap
      - added some checks to make sure that the type 
        constraints are found properly and to give 
        better diagnostics

0.04 Tues. June 26, 2007
    * MooseX::Getopt::OptionTypeMap
      - Added support for subtype constraint inference
        from parent types 
        - added tests and docs for this
    * MooseX::Getopt
      - Added extra_argv attribute
        - added tests and docs for this
      - We now unmangle the Getopt::Long-mangled @ARGV
        - added tests and docs for this
      - We now throw an exception from new_with_options
        if Getopt fails due to bad arguments.
        - added tests and docs for this

0.03 Wed. May 2nd, 2007
    ~ downgraded the Getopt version requirement
      to 2.35 as per RT #26844
    ~ adding blblack to the authors list
      
    * MooseX::Getopt      
      - doc update to show simple way to of excluding 
        an attribute, but not having accessors with 
        underscores (thanks to Zaba on #moose for this)
    * MooseX::Getopt::Meta::Attribute
      - tightening up the type constraint in the 
        cmd_alias coercion to only accept strings

0.02 Friday, April 6, 2007
    * MooseX::Getopt